<resources>
    <string name="app_name">YUSINSA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="title_category">Category</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_mymenu">MyMenu</string>
</resources>