<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/baseline_list_white_18"
        android:title="@string/title_category" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_white_18"
        android:title="@string/title_search" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/outline_home_white_18"
        android:title="@string/title_home" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/outline_favorite_border_white_18"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/myMenuFragment"
        android:icon="@drawable/outline_person_white_18"
        android:title="@string/title_mymenu" />

</menu>